[gd_scene load_steps=21 format=2]

[ext_resource path="res://designer/scripts/LevelDesigner.gd" type="Script" id=1]
[ext_resource path="res://designer/scripts/Grid.gd" type="Script" id=2]
[ext_resource path="res://designer/assets/pegs/ball.png" type="Texture" id=3]
[ext_resource path="res://designer/assets/pegs/default/sprite_pegs1.png" type="Texture" id=4]
[ext_resource path="res://designer/assets/brush-outline.png" type="Texture" id=5]
[ext_resource path="res://designer/assets/eraser.png" type="Texture" id=6]
[ext_resource path="res://designer/assets/pegs/default/sprite_pegs4.png" type="Texture" id=7]
[ext_resource path="res://designer/assets/pegs/default/sprite_pegs2.png" type="Texture" id=8]
[ext_resource path="res://designer/assets/pegs/default/sprite_pegs3.png" type="Texture" id=9]
[ext_resource path="res://designer/assets/pegs/default/sprite_pegs5.png" type="Texture" id=10]
[ext_resource path="res://designer/assets/pegs/default/sprite_pegs0.png" type="Texture" id=11]
[ext_resource path="res://designer/assets/help-circle-outline.png" type="Texture" id=12]
[ext_resource path="res://designer/assets/magnify.png" type="Texture" id=13]
[ext_resource path="res://designer/assets/pan.png" type="Texture" id=14]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.195428, 0.195428, 0.226562, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.120821, 0.120821, 0.136719, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.121569, 0.121569, 0.137255, 1 )

[sub_resource type="AnimatedTexture" id=3]
frames = 6
fps = 5.0
frame_0/texture = ExtResource( 11 )
frame_1/texture = ExtResource( 4 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 8 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 9 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 7 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 10 )
frame_5/delay_sec = 0.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="LevelDesigner" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Container" type="ScrollContainer" parent="CanvasLayer"]
anchor_left = 0.333
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.320007
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="Grid" type="Control" parent="CanvasLayer/Container"]
mouse_filter = 2
input_pass_on_modal_close_click = false
script = ExtResource( 2 )
SIZE_PEG = Vector2( 18, 18 )
SIZE_GRID = Vector2( 21, 16 )

[node name="Pan" type="Panel" parent="CanvasLayer"]
anchor_left = 0.333
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.320007
mouse_filter = 2
input_pass_on_modal_close_click = false
custom_styles/panel = SubResource( 6 )

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_right = 0.267
anchor_bottom = 1.0
margin_right = 63.68

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
anchor_right = 1.0
margin_right = -40.0
margin_bottom = 64.0
text = "Level Designer"
align = 1
valign = 1

[node name="Tools" type="Panel" parent="CanvasLayer/Panel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
custom_styles/panel = SubResource( 1 )

[node name="ButtonBrush" type="Button" parent="CanvasLayer/Panel/Tools"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 40.0
margin_bottom = 80.0
hint_tooltip = "Brush (B)"
toggle_mode = true
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="ButtonEraser" type="Button" parent="CanvasLayer/Panel/Tools"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 80.0
margin_bottom = 120.0
hint_tooltip = "Erase (E)"
toggle_mode = true
icon = ExtResource( 6 )
flat = true
expand_icon = true

[node name="ButtonPan" type="Button" parent="CanvasLayer/Panel/Tools"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 120.0
margin_right = 6.10352e-05
margin_bottom = 160.0
hint_tooltip = "Pan (Space / P)"
toggle_mode = true
icon = ExtResource( 14 )
flat = true
expand_icon = true

[node name="Grid" type="Panel" parent="CanvasLayer/Panel"]
margin_top = 64.0
margin_right = 280.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="CanvasLayer/Panel/Grid"]
margin_left = 24.0
margin_top = 16.0
margin_right = 54.0
margin_bottom = 30.0
text = "Grid"
valign = 1

[node name="HSliderX" type="HSlider" parent="CanvasLayer/Panel/Grid"]
margin_left = 64.0
margin_top = 40.0
margin_right = 256.0
margin_bottom = 56.0
max_value = 32.0

[node name="Label" type="Label" parent="CanvasLayer/Panel/Grid/HSliderX"]
margin_left = -40.0
margin_top = -8.0
margin_right = -8.0
margin_bottom = 24.0
text = "0"
valign = 1

[node name="HSliderY" type="HSlider" parent="CanvasLayer/Panel/Grid"]
margin_left = 64.0
margin_top = 72.0
margin_right = 256.0
margin_bottom = 88.0
max_value = 32.0

[node name="Label" type="Label" parent="CanvasLayer/Panel/Grid/HSliderY"]
margin_left = -40.0
margin_top = -8.0
margin_right = -10.0
margin_bottom = 24.0
text = "0"
valign = 1

[node name="ButtonGenerate" type="Button" parent="CanvasLayer/Panel/Grid"]
margin_left = 192.0
margin_top = 96.0
margin_right = 256.0
margin_bottom = 116.0
text = "apply"

[node name="ButtonGenerateHelp" type="Button" parent="CanvasLayer/Panel/Grid"]
margin_left = 160.0
margin_top = 92.0
margin_right = 192.0
margin_bottom = 120.0
hint_tooltip = "Applying a new grid size will clear all progress."
icon = ExtResource( 12 )
flat = true
expand_icon = true

[node name="Pegs" type="Panel" parent="CanvasLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.05176e-05
margin_top = 192.0
margin_right = -40.0
margin_bottom = -156.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer/Panel/Pegs"]
margin_left = 24.0
margin_top = 16.0
margin_right = 54.0
margin_bottom = 30.0
text = "Pegs"
valign = 1

[node name="ItemList" type="ItemList" parent="CanvasLayer/Panel/Pegs"]
anchor_top = 0.021
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 35.968
margin_right = -16.0
custom_styles/bg = SubResource( 4 )
items = [ "ball spawn", ExtResource( 3 ), false, "default peg", SubResource( 3 ), false ]
auto_height = true
max_columns = 6
fixed_column_width = 30
icon_mode = 0
icon_scale = 1.5

[node name="Zoom" type="Panel" parent="CanvasLayer/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.05176e-05
margin_top = -28.0
margin_right = 72.0

[node name="LineEditZoom" type="LineEdit" parent="CanvasLayer/Panel/Zoom"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -28.0
margin_right = 72.0
hint_tooltip = "Zoom (Z)"
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "150%"
align = 1
max_length = 4
caret_blink = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panel/Zoom"]
margin_left = 8.0
margin_top = 6.0
margin_right = 24.0
margin_bottom = 22.0
texture = ExtResource( 13 )
expand = true

[node name="ButtonExport" type="Button" parent="CanvasLayer/Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 188.0
margin_top = -44.0
margin_right = 256.0
margin_bottom = -20.0
text = "export"

[node name="LabelLoading" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -36.0
margin_right = 216.0
margin_bottom = -12.0
valign = 1

[node name="Area2D" type="Area2D" parent="."]

[connection signal="gui_input" from="CanvasLayer/Pan" to="." method="_on_Pan_gui_input"]
[connection signal="pressed" from="CanvasLayer/Panel/Tools/ButtonBrush" to="." method="_on_ButtonBrush_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/Tools/ButtonEraser" to="." method="_on_ButtonEraser_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/Tools/ButtonPan" to="." method="_on_ButtonPan_pressed"]
[connection signal="ready" from="CanvasLayer/Panel/Grid" to="." method="_on_Grid_ready"]
[connection signal="value_changed" from="CanvasLayer/Panel/Grid/HSliderX" to="." method="_on_HSliderX_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/Grid/HSliderY" to="." method="_on_HSliderY_value_changed"]
[connection signal="pressed" from="CanvasLayer/Panel/Grid/ButtonGenerate" to="." method="_on_ButtonGenerate_pressed"]
[connection signal="item_selected" from="CanvasLayer/Panel/Pegs/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="ready" from="CanvasLayer/Panel/Pegs/ItemList" to="." method="_on_ItemList_ready"]
[connection signal="text_entered" from="CanvasLayer/Panel/Zoom/LineEditZoom" to="." method="_on_LineEditZoom_text_entered"]
[connection signal="pressed" from="CanvasLayer/Panel/ButtonExport" to="." method="_on_ButtonExport_pressed"]
